update cooperation entity